# digital-software-hub

./: .env.example  .env.local.example  .env.production  .gitignore  CONSOLIDATION.md  WORKSPACE.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
3dstuff/: BOXES_HANDOVER.md  CREATIVE_BOXES_CHECKLIST.md  api.py  batch_process.py  box.glb  build_creative_contact_sheets.py  build_creative_inventory.py  build_nas_creative_library.py  check_excel.py  crosscheck.py  crosscheck_report.md  gen_own_boxes.py  import_creative_boxes.py  label_creative_library_collections.py  live-creative-manifest.json  process_product.py  refresh_creative_library_catalog.py  requirements.txt  viewer.html
3dstuff/models/: manifest.json
DSMAILABPAGES/: case-logistics-routing.html  digital-infrastructure.html  dsmAIFinal.html  flo-ai-agents.html  software-automation.html
admin-app/: .gitignore  DESKTOP_APP.md  README.md  config.example.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite-woo-sync.mjs  vite.config.ts
admin-app/src/: App.tsx  index.css
admin-app/src-tauri/: Cargo.toml  tauri.conf.json
admin-app/src-tauri/capabilities/: default.json
admin-app/src-tauri/src/: main.rs
admin-app/tools/: ac-push.mjs  ac-sync.mjs  woo-sync.mjs
digitech/: index.html
digitech/Services/: services.html
dsm-chat-widget-ai/: README.md  index.html  package-lock.json  package.json
dsm-marketing/: index.html
public/: _redirects  llms.txt  site.webmanifest
src/: App.tsx  index.css  vite-env.d.ts
(+346 files in other folders)
